Bug 107603 - Crash in: mergedlo.dll
Summary: Crash in: mergedlo.dll
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.6.2 release
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2017-05-03 16:29 UTC by Regina Henschel
Modified: 2017-07-17 16:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["mergedlo.dll"]


Attachments
backtrace (29.07 KB, text/x-log)
2017-05-03 17:42 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-05-03 16:29:44 UTC
This bug was filed from the crash reporting server and is br-26dc3e44-5e85-435c-85d5-30e2d43524bd.
=========================================

How to reproduce:
1. Go to Tools > Outline Numbering
2. Make some settings, e.g. setting first level to ABC.
3. Click on button Format. You get a drop-down list.
4. Click on the item "Save as" from that list. Save it, e.g. with name "Alphabetic".

Notice, this will generate/update the file "chapter.cfg" in the folder Config in the user directory. This files contains the numbering definitions, so that they can be used independent of a document. The file is an XML-file and can be read in an editor.

5. Start a new document.
6. Go to Tools > Outline Numbering.
7. Click on button Format. You will see your just generated chapter numbering template "Alphabetic". Click on it to load it. ==> Crash.
Comment 1 Regina Henschel 2017-05-03 17:03:31 UTC
From my versions is the last good one
Version: 5.4.0.0.alpha0+
Build ID: 33f5bc54aaa7fe7aa9335726e30f9c349155e04d
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-12-01_23:21:05
Locale: de-DE (de_DE); Calc: group

From my versions is the first with crash
Version: 5.4.0.0.alpha0+
Build ID: a9f56091b6422ec8c42f09b8472200ae4ab12548
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-12-05_23:12:26
Locale: de-DE (de_DE); Calc: group
Comment 3 Xisco Faulí 2017-05-03 17:42:10 UTC
Created attachment 133047 [details]
backtrace
Comment 4 Xisco Faulí 2017-05-04 08:19:47 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2016-12-05 09:52:43 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-12-05 11:10:05 (GMT)
commit e5ecb998fd78137aec32ad2cc996eaa4bb3e499d (patch)
tree 43605bf020bc561cd75ffe8b506e0fcdef7487bc
parent 7dde56f2cfb970464f5ebbacac6ebb8b6d9cceef (diff)
avoid coverity#1371269 Missing move assignment operator

Adding Cc: to Caolán McNamara
Comment 5 Commit Notification 2017-05-04 09:15:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4b581bb996142d2906f23161ec673f958511649

Resolves: tdf#107603 crash after loading new numrule in numbering dialog

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Regina Henschel 2017-07-17 16:03:42 UTC
Verified in Version: 5.4.0.2
Build ID: 2b906d450a44f2bbe506dcd22c51b3fa11dc65fd
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: de-DE (de_DE); Calc: group

and in
Version: 6.0.0.0.alpha0+
Build ID: 9f3814af7264ce90685a82cbf4eb015a38f22bf7
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-28_00:47:42
Locale: de-DE (de_DE); Calc: group