Resolves: tdf#107603 crash after loading new numrule in numbering dialog

Change-Id: I0f270793a4b0312e23079789a37c402b31e54238